trying to fix invisible flash message 4

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -22,7 +22,7 @@ p {
 
 .alert {
   margin-bottom: 0;
-  color: black;
+  color: black !important;
 }
 
 /* Footer Info */
